# multitenant

./: READEME.rst  README.md  pyproject.toml
client/: models.py
client/migrations/: 0001_initial.py
hotel_shared/: admin.py  apps.py  models.py
hotel_shared/migrations/: 0001_initial.py
hotel_tenant/: admin.py  apps.py  models.py
hotel_tenant/migrations/: 0001_initial.py
multitenant/: settings.py  urls.py  urls_public.py
