[tool.poetry]
name = "multitenant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.6"
django-tenants = "^3.4.8"
psycopg2 = "^2.9.5"
black = "^23.1.0"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

